--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/grilled_romaine.html">Grilled Romaine</a>
+    <ul>
+        <li><a href="recipes/grilled_romaine.html">Grilled Romaine</a></li>
+    </ul>
 </body>
 </html>
