updated header title and added steps to instructions

--- a/recipes/grilled_romaine.html
+++ b/recipes/grilled_romaine.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grilled Romaine Recipe</title>
 </head>
 <body>
     <h1>Grilled Romaine</h1>
@@ -22,6 +22,7 @@
         <li>1 apple (honeycrisp or gala), cut into matchsticks</li>
         <li>¼ pound Pecorino Stagionato (or other firm Italian cheese)</li>
     </ul>
+    <h2>Steps</h2>
     <ol>
         <li>Heat grill to 375 degrees.</li>
         <li>To make vinaigrette, in a medium bowl, whisk together red onion, Dijon, apple cider vinegar, salt, and pepper. Drizzle in olive oil slowly, whisking constantly.</li>
