868bu45be - Update recipe copy on website

--- a/recipes/grilled_romaine.html
+++ b/recipes/grilled_romaine.html
@@ -23,5 +23,12 @@
         <li>¼ pound Pecorino Stagionato (or other firm Italian cheese)</li>
     </ul>
     <h2>Steps</h2>
+    <ol>
+        <li>Heat grill to 375 degrees.</li>
+        <li>To make vinaigrette, in a medium bowl, whisk together red onion, Dijon, apple cider vinegar, salt, and pepper. Drizzle in olive oil slowly, whisking constantly.</li>
+        <li>To make salad, cut romaine heads in half lengthwise, drizzle with olive oil, season with salt and pepper. Place romaine and guanciale directly on preheated grill and cook until slightly charred, turning occasionally. Remove romaine and guanciale from heat and transfer to cutting board.</li>
+        <li>Chop romaine, transfer to a mixing bowl, and dress with vinaigrette. Cut guanciale into small pieces and sprinkle over romaine.</li>
+        <li>Top salad with apples and grate Pecorino Stagionato on top.</li>
+    </ol>
 </body>
 </html>
